# PlAssignment2

./: README.md  assign2.txt
Elixir/: build.sh  mix.exs
Elixir/src/: fib.ex
Elixir/test/: fib_test.exs
Haskell/: build.cabal  build.sh
Haskell/src/: Fibs.hs
Haskell/test/: fib_test.hs
Kotlin/: build.gradle
Kotlin/src/: fib.kt
Kotlin/test/: fib_test.kt
