Name:               Fibonacci
Version:            1.0.0
cabal-version:      >= 1.8
build-type:         Simple

Library
  Exposed-Modules:  Fibs
  hs-source-dirs:   src
  Build-Depends:    base >= 4.11 && < 5
                  , containers

Test-Suite tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test, src
  Main-is:          fib_test.hs
  other-modules:    Fibs
  Build-Depends:    base >= 4.11 && < 5
                  , containers
                  , tasty
                  , tasty-hunit
                  , Fibonacci
